# wager-program

wager/: .gitignore  Anchor.toml  README.md  package.json
wager/programs/wager/: Cargo.toml
wager/programs/wager/src/: constants.rs  errors.rs  lib.rs
wager/programs/wager/src/instructions/: cancel.rs  claim_fees.rs  create_game.rs  delegate_game.rs  init_fee_pool.rs  lock_game.rs  mod.rs  register_player.rs  request_coinflip.rs  schedule_auto_cancel.rs  settle.rs  settle_coinflip.rs  start_game.rs  undelegate_game.rs
wager/programs/wager/src/state/: fee_pool.rs  game.rs  mod.rs  vault.rs
wager/tests/: 01_init.test.ts  02_game_flow.test.ts  03_cancel.test.ts  04_claim_fees.test.ts  05_errors.test.ts  06_bugfixes.test.ts  07_vrf_distribution.test.ts  helpers.ts
wager/tests/devnet/: coinflip.test.ts  coinflip_errors.test.ts  normal_flow.test.ts
