[package]
name = "wager"
version = "0.1.0"
description = "Wager escrow program for BLAME mini-games"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
ephemeral-vrf-sdk = { version = "0.2.3", features = ["anchor"] }
ephemeral-rollups-sdk = { version = "0.8.5", features = ["anchor"] }
magicblock-magic-program-api = "0.8.0"
bincode = "1.3"
